--- a/default.env
+++ b/default.env
@@ -1,7 +1,6 @@
 # Client choice: See https://eth-docker.net/docs/Usage/ClientSetup for available options
 COMPOSE_FILE=teku-base.yml:geth.yml
 # Execution client endpoint / chain source. This default uses the execution node container.
-# Nimbus requires the URL to be ws:// or wss://, e.g. ws://execution:8546
 # For Teku and Lighthouse, you can specify multiple endpoints separated by commas
 EC_NODE=http://execution:8545
 # Execution client fallback nodes, for Prysm or Nimbus. Can't be empty.
@@ -13,11 +12,11 @@ GRAFFITI=eth-docker
 NETWORK=prater
 # Network to use for execution client. If using main net, set to mainnet.
 EC_NETWORK=goerli
-
 # Some clients suggest adjusting to higher (or lower) peer count. Adjust here, per client
 PRYSM_PEER_COUNT=45
 LH_PEER_COUNT=50
 TEKU_PEER_COUNT=74
+# Nimbus peer count should not be set below 70
 NIM_PEER_COUNT=160
 
 # Secure web proxy - advanced use, please see instructions
@@ -39,7 +38,7 @@ DDNS_PROXY=true
 # eth2/beacon project first, then replace the {projectid} and {secret} here and use one of these lines instead of the empty one
 #TEKU_RAPID_SYNC=--initial-state=https://{projectid}:{secret}@eth2-beacon-${NETWORK}.infura.io/eth/v1/debug/beacon/states/finalized
 #LH_RAPID_SYNC=--checkpoint-sync-url=https://{projectid}:{secret}@eth2-beacon-${NETWORK}.infura.io/
-#NIMBUS_RAPID_SYNC=--trusted-node-url=https://{projectid}:{secret}@eth2-beacon-${NETWORK}.infura.io/
+#NIMBUS_RAPID_SYNC=https://{projectid}:{secret}@eth2-beacon-${NETWORK}.infura.io/
 #LS_RAPID_SYNC=--weakSubjectivitySyncLatest=true --weakSubjectivityServerUrl=https://{projectid}:{secret}@eth2-beacon-${NETWORK}.infura.io/
 TEKU_RAPID_SYNC=
 LH_RAPID_SYNC=
