--- a/prysm/Dockerfile.binary
+++ b/prysm/Dockerfile.binary
@@ -9,7 +9,7 @@ ARG BUILD_TARGET
 ARG USER=prysmconsensus
 ARG UID=10002
 
-RUN apt-get update && apt-get install -y --no-install-recommends \
+RUN apt-get update && DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get install -y --no-install-recommends \
   ca-certificates curl bash tzdata \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/*
