--- a/besu/Dockerfile.binary
+++ b/besu/Dockerfile.binary
@@ -12,8 +12,7 @@ USER root
 RUN groupmod -g "${UID}" besu && usermod -u "${UID}" -g "${UID}" besu
 
 RUN set -eux; \
-        apt-get update; \
-        apt-get install -y gosu ca-certificates tzdata; \
+        apt-get update && DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get install -y gosu ca-certificates tzdata; \
         rm -rf /var/lib/apt/lists/*; \
 # verify that the binary works
         gosu nobody true
