--- a/besu/Dockerfile.source
+++ b/besu/Dockerfile.source
@@ -17,7 +17,7 @@ FROM eclipse-temurin:17-jre-focal
 ARG USER=besu
 ARG UID=10001
 
-RUN apt-get update && apt-get install -y --no-install-recommends \
+RUN apt-get update && DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get install -y --no-install-recommends \
   ca-certificates \
   tzdata \
   && apt-get clean \
