--- a/nimbus/Dockerfile.source
+++ b/nimbus/Dockerfile.source
@@ -18,7 +18,7 @@ FROM debian:bullseye-slim
 ARG USER=user
 ARG UID=10002
 
-RUN apt-get update && apt-get install -y --no-install-recommends \
+RUN apt-get update && DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get install -y --no-install-recommends \
   ca-certificates bash tzdata \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/*
