--- a/prysm/Dockerfile.source
+++ b/prysm/Dockerfile.source
@@ -17,7 +17,7 @@ FROM debian:bullseye-slim as consensus
 ARG USER=prysmconsensus
 ARG UID=10002
 
-RUN apt-get update && apt-get install -y --no-install-recommends \
+RUN apt-get update && DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get install -y --no-install-recommends \
   ca-certificates curl bash tzdata \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/*
