Improved Nimbus source build

--- a/nimbus/Dockerfile.sourcegnosis
+++ b/nimbus/Dockerfile.sourcegnosis
@@ -10,7 +10,7 @@ RUN apt-get update && apt-get install -y build-essential git libpcre3-dev ca-cer
 
 WORKDIR /usr/src
 RUN bash -c "git clone https://github.com/status-im/nim-beacon-chain && cd nim-beacon-chain && git config advice.detachedHead false && git fetch --all --tags && git checkout ${BUILD_TARGET} && \
-	make -j$(nproc) nimbus_beacon_node"
+	make -j$(nproc) nimbus_beacon_node && make -j$(nproc) gnosis-chain-build"
 
 # Pull all binaries into a second stage deploy debian container
 FROM debian:bullseye-slim
