--- a/default.env
+++ b/default.env
@@ -100,9 +100,9 @@ NIM_DOCKER_TAG=merge-7c8dad1
 NIM_DOCKERFILE=Dockerfile.binary
 
 # Teku
-TEKU_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
+TEKU_SRC_BUILD_TARGET=master
 TEKU_DOCKER_TAG=develop
-TEKU_DOCKERFILE=Dockerfile.binary
+TEKU_DOCKERFILE=Dockerfile.source
 
 # Lighthouse
 LH_SRC_BUILD_TARGET=unstable
