--- a/lh-validator.yml
+++ b/lh-validator.yml
@@ -22,7 +22,6 @@ services:
     volumes:
       - lhvalidator-data:/var/lib/lighthouse
       - /etc/localtime:/etc/localtime:ro
-      - ./${NETWORK}:/configs
     <<: *logging
     entrypoint:
       - lighthouse
@@ -37,10 +36,29 @@ services:
       - --metrics
       - --metrics-address
       - 0.0.0.0
-      - --testnet-dir
-      - /configs
-      - --terminal-total-difficulty-override
-      - ${TOTAL_TERMINAL_DIFFICULTY}
+      - --network
+      - ${NETWORK}
+      - --http
+      - --http-port
+      - ${KEY_API_PORT:-7500}
+      - --http-address
+      - 0.0.0.0
+      - --http-allow-origin
+      - "*"
+      - --unencrypted-http-transport
+  get-keyapi-token:
+    restart: "no"
+    image: alpine:latest
+    user: "10000"
+    volumes:
+      - lhvalidator-data:/var/lib/lighthouse
+      - /etc/localtime:/etc/localtime:ro
+    <<: *logging
+    entrypoint: ["/bin/sh","-c"]
+    command:
+      - |
+        cat /var/lib/lighthouse/validators/api-token.txt
+        echo
   validator-import:
     restart: "no"
     image: lighthouse:local-merge
@@ -49,6 +67,8 @@ services:
       - lhvalidator-data:/var/lib/lighthouse
       - ${DEPCLI_LOCALDIR}/validator_keys:/validator_keys
       - /etc/localtime:/etc/localtime:ro
+    environment:
+      - KEYSTORE_PASSWORD=${KEYSTORE_PASSWORD:-''}
     entrypoint:
       - validator-import.sh
       - lighthouse
@@ -59,6 +79,8 @@ services:
       - /var/lib/lighthouse
       - --directory
       - /val_keys
+      - --network
+      - ${NETWORK}
       - --debug-level=${LOG_LEVEL}
   validator-exit:
     restart: "no"
@@ -79,10 +101,6 @@ services:
       - --datadir
       - /var/lib/lighthouse
       - --debug-level=${LOG_LEVEL}
-      - --testnet-dir
-      - /configs
-      - --terminal-total-difficulty-override
-      - ${TOTAL_TERMINAL_DIFFICULTY}
       - --keystore
   validator-account:
     restart: "no"
