--- a/teku-base.yml
+++ b/teku-base.yml
@@ -16,14 +16,12 @@ services:
         - DOCKER_TAG=${TEKU_DOCKER_TAG}
       dockerfile: ${TEKU_DOCKERFILE}
     image: teku:local-merge
-    #    user: teku
-    user: root
+    user: teku
     stop_grace_period: 1m
     volumes:
       - teku-data:/var/lib/teku
       - /etc/localtime:/etc/localtime:ro
-      - ./${NETWORK}-secrets/keys/teku-keys:/keys
-      - ./${NETWORK}-secrets/keys/teku-secrets:/secrets
+      - ./${NETWORK}-secrets:/secrets
     environment:
       - JAVA_OPTS=-XX:SoftMaxHeapSize=2g -Xmx4g
     expose:
@@ -37,16 +35,15 @@ services:
           - eth2
     <<: *logging
     entrypoint:
-      - find-ip.sh
+      - docker-entrypoint.sh
       - /opt/teku/bin/teku
       - --data-path=/var/lib/teku
       - --log-destination=CONSOLE
       - --network=${NETWORK}
-      - --eth1-endpoints=${EL_NODE}
       - --p2p-port=${CL_P2P_PORT}
       - --p2p-peer-upper-bound=${TEKU_PEER_COUNT}
       - --validators-keystore-locking-enabled=true
-      - --validator-keys=/keys:/secrets
+      - --validator-keys=/var/lib/teku/validator-keys:/var/lib/teku/validator-passwords
       - --validators-graffiti=${GRAFFITI}
       - --logging=${LOG_LEVEL}
       - --rest-api-host-allowlist=*
@@ -57,10 +54,41 @@ services:
       - --metrics-port=8008
       - --metrics-interface=0.0.0.0
       - --metrics-host-allowlist=*
-      - --Xee-endpoint=${EL_NODE}
-      - --data-storage-non-canonical-blocks-enabled=true
-      - --Xvalidators-proposer-default-fee-recipient=${REWARDS_TO}
+      - --ee-endpoint=${EL_NODE_EXECUTION}
+      - --ee-jwt-secret-file
+      - /secrets/jwtsecret
+      - --validators-proposer-default-fee-recipient=${REWARDS_TO}
       - --p2p-discovery-bootnodes=${ENR}
+      - --validator-api-enabled=true
+      - --validator-api-port=${KEY_API_PORT:-7500}
+      - --validator-api-host-allowlist=*
+      - --validator-api-cors-origins=*
+      - --validator-api-keystore-file=/var/lib/teku/teku-keyapi.keystore
+      - --validator-api-keystore-password-file=/var/lib/teku/teku-keyapi.password
+  get-keyapi-token:
+    restart: "no"
+    image: alpine:latest
+    user: "10002"
+    volumes:
+      - teku-data:/var/lib/teku
+      - /etc/localtime:/etc/localtime:ro
+    <<: *logging
+    entrypoint: ["/bin/sh","-c"]
+    command:
+      - |
+        cat var/lib/teku/validator/key-manager/validator-api-bearer
+        echo
+  validator-import:
+    restart: "no"
+    image: teku:local-merge
+    user: root
+    volumes:
+      - teku-data:/var/lib/teku
+      - ${DEPCLI_LOCALDIR}/validator_keys:/validator_keys
+      - /etc/localtime:/etc/localtime:ro
+    environment:
+      - KEYSTORE_PASSWORD=${KEYSTORE_PASSWORD:-''}
+    entrypoint: validator-import.sh
   validator-exit:
     restart: "no"
     image: teku:local-merge
