--- a/teku-consensus.yml
+++ b/teku-consensus.yml
@@ -21,7 +21,7 @@ services:
     volumes:
       - teku-data:/var/lib/teku
       - /etc/localtime:/etc/localtime:ro
-      - ./${NETWORK}:/configs
+      - ./${NETWORK}-secrets:/secrets
     environment:
       - JAVA_OPTS=-XX:SoftMaxHeapSize=2g -Xmx4g
     expose:
@@ -35,10 +35,10 @@ services:
           - eth2
     <<: *logging
     entrypoint:
+      - docker-entrypoint.sh
       - /opt/teku/bin/teku
       - --data-path=/var/lib/teku
       - --log-destination=CONSOLE
-      - --eth1-endpoints=${EL_NODE}
       - --p2p-port=${CL_P2P_PORT}
       - --p2p-peer-upper-bound=${TEKU_PEER_COUNT}
       - --logging=${LOG_LEVEL}
@@ -50,14 +50,12 @@ services:
       - --metrics-port=8008
       - --metrics-interface=0.0.0.0
       - --metrics-host-allowlist=*
-        #      - --network=/configs/config.yaml
-        #- --initial-state=/configs/genesis.ssz
       - --network=${NETWORK}
-        #- --initial-state=/configs/genesis.ssz
-      - --Xee-endpoint=${EL_NODE}
-      - --data-storage-non-canonical-blocks-enabled=true
-        #      - --Xnetwork-merge-total-terminal-difficulty-override=${TOTAL_TERMINAL_DIFFICULTY}
-      - --Xvalidators-suggested-fee-recipient-address=${REWARDS_TO}
+      - --ee-endpoint=${EL_NODE_EXECUTION}
+      - --ee-jwt-secret-file
+      - /secrets/jwtsecret
+      - --validators-proposer-default-fee-recipient=${REWARDS_TO}
+      - --p2p-discovery-bootnodes=${ENR}
     labels:
       - traefik.enable=true
       - traefik.http.routers.cl.service=cl
