--- a/teku-validator.yml
+++ b/teku-validator.yml
@@ -22,6 +22,7 @@ services:
       - /etc/localtime:/etc/localtime:ro
     <<: *logging
     entrypoint:
+      - docker-entrypoint.sh
       - /opt/teku/bin/teku
       - validator-client
       - --beacon-node-api-endpoint=${CL_NODE}
@@ -32,6 +33,12 @@ services:
       - --validator-keys=/var/lib/teku/validator-keys:/var/lib/teku/validator-passwords
       - --validators-graffiti=${GRAFFITI}
       - --validators-early-attestations-enabled=false
+      - --validator-api-enabled=true
+      - --validator-api-port=${KEY_API_PORT:-7500}
+      - --validator-api-host-allowlist=*
+      - --validator-api-cors-origins=*
+      - --validator-api-keystore-file=/var/lib/teku/teku-keyapi.keystore
+      - --validator-api-keystore-password-file=/var/lib/teku/teku-keyapi.password
   validator-import:
     restart: "no"
     image: teku:local-merge
