--- a/teku/Dockerfile.source
+++ b/teku/Dockerfile.source
@@ -47,7 +47,7 @@ RUN mkdir -p /var/lib/teku/validator-keys && mkdir -p /var/lib/teku/validator-pa
 COPY --from=builder /usr/src/teku/build/install/teku/. /opt/teku/
 # Script to query and store validator key passwords
 COPY ./validator-import.sh /usr/local/bin/
-COPY ./find-ip.sh /usr/local/bin/
+COPY ./docker-entrypoint.sh /usr/local/bin/
 
 USER ${USER}
 
