--- a/default.env
+++ b/default.env
@@ -95,9 +95,9 @@ LOG_LEVEL=info
 SSV_NODE_TAG=latest-ubuntu
 
 # Nimbus
-NIM_SRC_BUILD_TARGET=kintsugi
-NIM_DOCKER_TAG=merge-7c8dad1
-NIM_DOCKERFILE=Dockerfile.binary
+NIM_SRC_BUILD_TARGET=kiln-dev-auth
+NIM_DOCKER_TAG=merge-46a13d8
+NIM_DOCKERFILE=Dockerfile.source
 
 # Teku
 TEKU_SRC_BUILD_TARGET=master
@@ -110,14 +110,15 @@ LH_DOCKER_TAG=latest-unstable
 LH_DOCKERFILE=Dockerfile.source
 
 # Prysm
-PRYSM_SRC_BUILD_TARGET=develop
-PRYSM_DOCKER_TAG=kintsugi-a9ac91
-PRYSM_DOCKERFILE=Dockerfile.binary
+PRYSM_SRC_BUILD_TARGET=kiln
+PRYSM_DOCKER_TAG=kiln-3ea8b7
+PRYSM_VC_DOCKER_TAG=kiln-ee1ee6
+PRYSM_DOCKERFILE=Dockerfile.source
 
 # Lodestar
-LS_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
+LS_SRC_BUILD_TARGET=master
 LS_DOCKER_TAG=next
-LS_DOCKERFILE=Dockerfile.binary
+LS_DOCKERFILE=Dockerfile.source
 
 # Erigon
 ERIGON_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
