--- a/el-shared.yml
+++ b/el-shared.yml
@@ -5,5 +5,6 @@ services:
     ports:
       - ${EL_RPC_PORT}:${EL_RPC_PORT}/tcp
       - ${EL_WS_PORT}:${EL_WS_PORT}/tcp
+      - 8551:8551/tcp
   eth:
     image: tianon/true
