--- a/lodestar-consensus.yml
+++ b/lodestar-consensus.yml
@@ -22,6 +22,7 @@ services:
       - lsconsensus-data:/var/lib/lodestar/consensus
       - /etc/localtime:/etc/localtime:ro
       - ./${NETWORK}:/configs
+      - ./${NETWORK}-secrets:/secrets
     ports:
       - ${CL_P2P_PORT}:${CL_P2P_PORT}/tcp
       - ${CL_P2P_PORT}:${CL_P2P_PORT}/udp
@@ -57,9 +58,11 @@ services:
       - ${ENR}
       - --network.connectToDiscv5Bootnodes
       - --network.discv5.enabled=true
-      - --eth1.disableEth1DepositDataTracker=true
-      - --eth1.enabled=true
-      - --execution.urls=${EL_NODE}
+      - --eth1.providerUrls
+      - ${EL_NODE}
+      - eth1.depositContractDeployBlock=5797
+      - --execution.urls=${EL_NODE_EXECUTION}
+      - --jwt-secret=/secrets/jwtsecret
     labels:
       - traefik.enable=true
       - traefik.http.routers.cl.service=cl
