--- a/default.env
+++ b/default.env
@@ -5,6 +5,7 @@ REWARDS_TO=
 # Execution client endpoint / chain source. This default uses the execution node container.
 # Nimbus requires the URL to be ws:// or wss://, e.g. ws://execution:8546
 EL_NODE=http://execution:8545
+# Make this ws:// for Nimbus
 EL_NODE_EXECUTION=http://execution:8551
 # Graffiti to use for validator
 GRAFFITI=eth-docker
