--- a/nimbus/Dockerfile.binary
+++ b/nimbus/Dockerfile.binary
@@ -35,7 +35,7 @@ RUN mkdir -p /var/lib/nimbus && chown -R user:user /var/lib/nimbus && chmod 700 
 RUN cp /home/user/nimbus-eth2/build/beacon_node /usr/local/bin/nimbus_beacon_node
 # Scripts for privilege change and validator import
 COPY ./validator-import.sh /usr/local/bin/
-COPY ./find-ip.sh /usr/local/bin/
+COPY ./docker-entrypoint.sh /usr/local/bin/
 
 USER user
 
