--- a/default.env
+++ b/default.env
@@ -64,8 +64,8 @@ EL_P2P_PORT=30303
 CL_P2P_PORT=9000
 # Local grafana dashboard port. Do not expose to Internet, it is insecure http
 GRAFANA_PORT=3000
-# Local prysm web UI port. Do not expose to Internet, it is insecure http
-PRYSM_WEB_PORT=7500
+# Local key management port. Do not expose to Internet, it is insecure http
+KEY_API_PORT=7500
 # Secure web proxy port, 443 and 80 are great defaults
 TRAEFIK_WEB_PORT=443
 TRAEFIK_WEB_HTTP_PORT=80
