--- a/prysm/Dockerfile.binary
+++ b/prysm/Dockerfile.binary
@@ -43,7 +43,7 @@ USER ${USER}
 ENTRYPOINT ["beacon-chain"]
 
 #FROM prysmaticlabs/prysm-validator:${DOCKER_TAG} as vcsource
-FROM gcr.io/prysmaticlabs/prysm/validator:kintsugi-30ed0d as vcsource
+FROM gcr.io/prysmaticlabs/prysm/validator:${DOCKER_VC_TAG} as vcsource
 
 FROM consensus as validator
 
@@ -66,4 +66,5 @@ RUN mkdir -p /var/lib/prysm && chown ${USER}:${USER} /var/lib/prysm && chmod 700
 
 COPY --from=vcsource /app/cmd/validator/validator /usr/local/bin/
 COPY ./validator-import.sh /usr/local/bin/
+COPY ./create-wallet.sh /usr/local/bin/
 USER ${USER}
