--- a/default.env
+++ b/default.env
@@ -122,9 +122,9 @@ LS_DOCKER_TAG=next
 LS_DOCKERFILE=Dockerfile.source
 
 # Erigon
-ERIGON_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
-ERIGON_DOCKER_TAG=stable
-ERIGON_DOCKERFILE=Dockerfile.binary
+ERIGON_SRC_BUILD_TARGET=devel
+ERIGON_DOCKER_TAG=
+ERIGON_DOCKERFILE=Dockerfile.source
 
 # Go-Ethereum aka Geth
 GETH_SRC_BUILD_TARGET=merge-kiln-v2
@@ -132,17 +132,14 @@ GETH_DOCKER_TAG=merge-87d642d
 GETH_DOCKERFILE=Dockerfile.source
 
 # Nethermind
-NM_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
-#NM_DOCKER_TAG=latest
-NM_DOCKER_TAG=kintsugi_0.8
-NM_DOCKERFILE=Dockerfile.binary
+NM_SRC_BUILD_TARGET=kiln
+NM_DOCKER_TAG=kiln_0.8
+NM_DOCKERFILE=Dockerfile.source
 
 # Besu
-#BESU_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
-BESU_SRC_BUILD_TARGET=merge
-#BESU_DOCKER_TAG=latest
-BESU_DOCKER_TAG=merge
-BESU_DOCKERFILE=Dockerfile.binary
+BESU_SRC_BUILD_TARGET=main
+BESU_DOCKER_TAG=latest
+BESU_DOCKERFILE=Dockerfile.source
 
 # eth2.0-deposit-cli
 DEPCLI_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
