--- a/besu/Dockerfile.source
+++ b/besu/Dockerfile.source
@@ -20,6 +20,7 @@ ARG UID=10001
 RUN apt-get update && apt-get install -y --no-install-recommends \
   ca-certificates \
   tzdata \
+  gosu \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/*
 
@@ -37,6 +38,7 @@ RUN mkdir -p /var/lib/besu && chown -R ${USER}:${USER} /var/lib/besu && chmod -R
 
 # Copy executable
 COPY --from=builder /usr/src/besu/build/install/besu/. /opt/besu/
+COPY ./docker-entrypoint.sh /usr/local/bin/
 
 USER ${USER}
 
