--- a/erigon/Dockerfile.source
+++ b/erigon/Dockerfile.source
@@ -17,7 +17,7 @@ FROM alpine:latest
 ARG USER=erigon
 ARG UID=10001
 
-RUN apk add --no-cache libgcc libstdc++ bash ca-certificates tzdata
+RUN apk add --no-cache libgcc libstdc++ bash ca-certificates tzdata su-exec
 
 # See https://stackoverflow.com/a/55757473/12429735RUN
 RUN adduser \
@@ -33,6 +33,7 @@ RUN mkdir -p /var/lib/erigon && chown ${USER}:${USER} /var/lib/erigon
 COPY --from=builder /src/erigon/build/bin/erigon /usr/local/bin/
 COPY --from=builder /src/erigon/build/bin/rpcdaemon /usr/local/bin/
 COPY ./docker-entrypoint.sh /usr/local/bin/
+COPY ./docker-entrypoint-rpc.sh /usr/local/bin/
 
 USER ${USER}
 
